tests/valid/definite/IntDiv_Valid_1.whiley
int f(int x, int y) where y != 0:
    return x / y

void System::main([string] args):
     int x
     x = f(10,2)
     print str(x)  
