tests/invalid/simple/DefiniteAssign_CompileFail_3.whiley
int f(int x) where x>=0 && y>0:
    return x
